# codecrafters-interpreter-rust

./: Cargo.toml  README.md  index.html  test.lox  test.mjs
src/: ast_printer.rs  callable.rs  command.rs  constants.rs  environment.rs  error.rs  evaluator.rs  lib.rs  lox.rs  main.rs  parser.rs  scanner.rs  token.rs  token_display.rs  token_type.rs
src/ast_interpreter/: expr_interpreter.rs  mod.rs  stmt_interpreter.rs
src/data_types/: mod.rs  scaler.rs  scaler_op_error.rs
src/data_types/scaler/: class_value.rs  instance_value.rs  mod.rs
src/data_types/scaler/function_value/: mod.rs  native_function.rs  user_function.rs
src/error/: mod.rs
src/evaluator/: error.rs  eval_expr.rs  eval_stmt.rs  evaluator.rs  interface.rs  mod.rs
src/expr/: assign.rs  ast_interpreter.rs  ast_printer.rs  binary.rs  call.rs  get.rs  grouping.rs  literal.rs  logical.rs  mod.rs  set.rs  super_expr.rs  this.rs  unary.rs  variable.rs
src/parser/: mod.rs  parse_error.rs
src/resolver/: impls.rs  interface.rs  mod.rs  resolver.rs
src/stmt/: block.rs  class_stmt.rs  expression.rs  function.rs  if_stmt.rs  mod.rs  print.rs  return_stmt.rs  var.rs  while_stmt.rs
