[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"    # error handling
bytes = "1.9.0"      # helps manage buffers
thiserror = "1.0.38" # error handling

tokio = { version = "1.41.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] } # creating a cli
lazy_static = { version = "1.5.0" }
atoi = "2.0.0"